--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,15 +8,7 @@
       <div class="ui fluid raised card chatbox">
       <div class="content">
         <div class="ui feed">
-          <% @messages.each do |message|%>
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <em><%= message.user.first_name %> <%= message.user.last_name %></em> : <%= message.body %>
-                </div>
-              </div>
-            </div>
-          <% end %>
+           <%= render @messages %>
         </div>
       </div>
       <div class = "extra content">
