--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -6,7 +6,7 @@
 <div class = "ui two column grid">
   <div class = "twelve wide column">
       <div class="ui fluid raised card chatbox">
-      <div class="content">
+      <div class="content" id = "messages">
         <div class="ui feed" id="msg-wrapper">
            <%= render @messages %>
         </div>
