--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,17 @@
   Sign Up
 </h4>
 
+<% if @user.errors.any? %>
+  <div class="ui error message transition">
+    <h5>The following errors prevented the user from getting created</h5>
+    <ul>
+        <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for(@user, html: {class: "ui form", role: "form"},  url: signup_path) do |f| %>
   <div class="field">
     <%= f.label :first_name, "First Name" %>
@@ -11,7 +22,7 @@
   </div>
   <div class="field">
     <%= f.label :last_name, "Last Name" %>
-    <%= f.text_field :first_name, placeholder: "Last Name" %>
+    <%= f.text_field :last_name, placeholder: "Last Name" %>
   </div>
   <div class="field">
     <%= f.label :email, "Email" %>
