Fix signup form password_confirmation field

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -34,7 +34,7 @@
   </div>
   <div class="field">
     <%= f.label :password_confirmation, "Password Confirmation" %>
-    <%= f.password_field :password %>
+    <%= f.password_field :password_confirmation %>
   </div>
   <%= f.button "Submit", class: "ui button orange" %>
 <% end %>
